0018 ReplicatorG
New features:
* Tabs indicate object modification status
Contributions:
* Mikko Sivulainen (paeaetech): better estimation for SD uploads
* Mikko Sivulainen (paeaetech): improved serial selection handling


0017 ReplicatorG
* New features:
** STL files can now be directly loaded and previewed
** Skeinforge 0006 integrated with some simple profiles; STL files
   can now be sliced from within ReplicatorG
** Build concept now encapsulates a gcode slice and an STL model
** Fixed numerous Mac interface issues
** Multiple profiles in skeinforge 0006 (Charles Pax)
* Bug fixes:
** Better handling for 0-length payloads (Aaron Colwell)
** Fix for Mac build issues (Rick Kimball)

0016 ReplicatorG
* New features:
** Rearranged control panel to better suit machines with small screens
** Added temperature monitoring graph to control panel

0015 ReplicatorG
* Bug fixes:
* * gh-44: "Save As" now works as expected
* * New files now work as expected
* * gh-35: No longer resetting machine at startup
* * gh-33: Removed separate concept of current position from
*   gcode parser
* New features:
* * gh-42: arc resolution is now controllable via preferences
* * gh-40: valve/fan outputs renamable in machines.xml.
* * gh-39: frostruder support.
* * gh-37: messages are now color-coded and timestamped
* * gh-32: preference for default sketch at start time
* * Support for tuning the PID parameters on the extruder
*   controller
* * Automatically checks servers for new versions
* * Better shutdown and interrupt behavior

0014 ReplicatorG
* Many small stability fixes
* Faster startup
* Working serial timeouts on Windows and Mac OS X
* Support for new onboard preferences for Motherboard and Extruder Controller
* Fixes for a number of Linux and Mac display issues
* Fix for firmware upload source pref
* The text field in the control panel are now also handled when hitting "Enter"/"Return" (not only when focus is lost).

0013 ReplicatorG
* Added ability to phone home for new firmware