@@ -115,8 +115,7 @@ public class ToolpathGeneratorThread extends Thread {
 		try {
 			BuildCode code = generator.generateToolpath();
 			if (code != null) {
-				build.code = code;
-				build.loadCode();
+				build.reloadCode();
 				generator.emitCompletion(GeneratorListener.Completion.SUCCESS, null);
 				Base.logger.info("Toolpath generation complete!");
 			} else {
